Fix the '-proc:full' flag to use the correct value.